feat: Implement initial Gross to Net calculator
Migrates core calculation logic from separate files into a single `index.tsx` component.
Updates `package.json` to reflect the new dependency structure for React.
Refactors the application to use Babel standalone for in-browser compilation and module resolution via CDN, simplifying local development setup.
Introduces type definitions and constants directly within `index.tsx` for a more consolidated application structure.

--- a/index.html
+++ b/index.html
@@ -5,25 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TÍNH THUẾ PIT GROSS <-> NET</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    
+    <!-- Babel Standalone for in-browser compilation -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
     <style>
-      /* Enforce Times New Roman as requested */
       body {
         font-family: 'Times New Roman', Times, serif;
       }
     </style>
-  <script type="importmap">
+
+    <script type="importmap">
 {
   "imports": {
+    "react": "https://esm.sh/react@18.2.0",
+    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.263.1",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+    
+    <!-- Main Application Script -->
+    <script type="text/babel" data-type="module" src="./index.tsx"></script>
   </body>
 </html>
